@@ -40,7 +40,6 @@ TODO
    - Add needed includes to all header files.
    - Get rid of unuseful "unsigned" modifiers.
    - Use internerr instead of assert, and print more meaninful messages.
-   - Make deb build version a version instead of doing checks over a string.
    - Use enums for currently hardcoded literals (replacingfilesandsaid,
      saidread, rok, filetriggers_edited, etc).
    - Do not use nfmalloc (and friends) for non in-core db memory.
