@@ -3,6 +3,7 @@
  * dpkg-split.h - external definitions for this program
  *
  * Copyright © 1995 Ian Jackson <ian@chiark.greenend.org.uk>
+ * Copyright © 2008-2012 Guillem Jover <guillem@debian.org>
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -21,6 +22,8 @@
 #ifndef DPKG_SPLIT_H
 #define DPKG_SPLIT_H
 
+#include <dpkg/deb-version.h>
+
 action_func do_split;
 action_func do_join;
 action_func do_info;
@@ -29,8 +32,8 @@ action_func do_queue;
 action_func do_discard;
 
 struct partinfo {
+  struct deb_version fmtversion;
   const char *filename;
-  const char *fmtversion;
   const char *package;
   const char *version;
   const char *arch;
